--- a/app/src/main/resources/static/about/index.html
+++ b/app/src/main/resources/static/about/index.html
@@ -66,8 +66,23 @@
     </header>
     <main class="container-main">
       <article class="container-page">
+        <div class="page-title">
+    <h2>Skills Set</h2>
+    <br>
+  </div>
+  <div class="page-content">
+    <p> 
+      Java/SQL/Spring Boot/Vue.js/Redis/C#<br>
+      jsp/javascript/JQuery/iBatis/Git/Gitea 
+    </p> 
+  </div>
+  <br>
+  <br>
+  <br>
+  <br>
   <div class="page-title">
-    <h1>About</h1>
+    <h2>About</h2>
+    <br>
   </div>
   <div class="page-content">
     <p> 
