--- a/app/src/main/resources/static/404.html
+++ b/app/src/main/resources/static/404.html
@@ -73,9 +73,9 @@
     </main>
     <footer class="container-footer">
       <div class="footer-copyright">
-  <span class="footer-copyright-text float-left">Copyright &copy; 2025. example.com.</span>
+  
   <span class="footer-copyright-text float-right">
-    Powered by <a href="https://jekyllrb.com/">Jekyll</a>, themed by <a href="https://github.com/HyeSooYoon">Jekyll-Paper</a>.
+    Since 2016
   </span>
 </div>
     </footer>
